fix bug on random, alignment on menu

--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,21 @@
 *{
   /* border: dotted; */
 }
+.card{
+  margin-top: 2rem;
+}
 
 .card h1{
   
-  font-size: 4.3rem;
+  font-size: 2.3rem;
   width: 26rem;
   /* border: dotted; */
   margin: 0 auto;
+  margin-left: -1rem;
+}
+
+.generate{
+  margin-top: 1rem;
 }
 
 button{
@@ -25,7 +33,14 @@ button{
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: .5rem;
+}
+.del-btn{
+  border-radius: 50%;
+  padding: 0;  
+  height: 1rem;
+  width: 1rem;
+  flex-shrink: 0;
 }
 
 .add input{
@@ -34,15 +49,23 @@ button{
 
 li{
   display: flex;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
   gap: 1rem;
   margin: 0 1rem;
+  padding-left: 0;
+}
+.picked{
+  color: #CF492F;
 }
 
-.grid8{
+.card .picked span{
+  /* border: solid 2px rgb(1, 72, 53); */
+}
+.grid{
   display: grid;
-  grid-template-columns: repeat(8, 1fr );
+  grid-template-columns: repeat(2, 1fr );
+  text-align: right;
 }
 
 .flex{
@@ -55,4 +78,10 @@ li{
 ul{
   width: 80%;
   margin: 3rem auto;
+  padding-left: 0;
+  
+}
+
+ul p{
+  font-size: 1rem;
 }
